# LambdaMART

./: .gitattributes  .gitignore  CMakeLibs.cmake  CMakeLists.txt  README.md  average.py  cache_reference.txt  createlink.sh  main.cpp  run20.sh  run5.sh  runall.sh
data/: .gitignore  download.sh  tiny
data/MSLR-WEB30K/: 10.train  10.train.query  11.train  11.train.query  12.train  12.train.query  13.train  13.train.query  14.train  14.train.query  15.train  15.train.query  16.train  16.train.query  17.train  17.train.query  17.vali  17.vali.query  18.train  18.train.query  19.train  19.train.query  20.train  20.train.query  21.train  21.train.query
data/debug/: README.txt  boundary.txt  initScores.txt  label.txt  trace.txt  trainingData.txt
data/lightgbm/: rank.train  rank.train.query
data/mq2008/: mq2008.small  small.train  small.train.query  small.vali  small.vali.query
data/tiny/: chana.label  chana.train  tiny.train
include/: common.h  config.h
include/lambdamart/: Booster.h  LambdaRank.h  bin.h  booster.h  boosting.h  common.h  config.h  dataset.h  histogram.h  lambdamart.h  lambdarank.h  log.h  model.h  pcm_Export.h  perf.h  treelearner.h  types.h
logs/: results.xlsx
report/: bibl_conf.bib  report.tex
src/: lambdamart.h
tests/: debug.conf  lightgbm.conf  mslr.10.conf  mslr.11.conf  mslr.12.conf  mslr.13.conf  mslr.14.conf  mslr.15.conf  mslr.16.conf  mslr.17.conf  mslr.18.conf  mslr.19.conf  mslr.20.conf  mslr.21.conf  ndcg.cpp  runall.sh  small.conf  tiny.conf
validation/: .gitignore  README.md  mslr.vali.conf  valid_infra.py
(+32 files in other folders)
